Place detached off-canvas menus on a lower z-index than normal menus, fixes #326

--- a/scss/components/_off-canvas.scss
+++ b/scss/components/_off-canvas.scss
@@ -24,6 +24,7 @@ $offcanvas-frame-selector: '.grid-frame' !default;
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
   transition: transform $offcanvas-animation-speed ease-out;
+  z-index: 2;
 
   // Active state
   &.is-active {
@@ -41,14 +42,9 @@ $offcanvas-frame-selector: '.grid-frame' !default;
 @mixin off-canvas-detached {
   z-index: 0;
   box-shadow: none;
-  display: none;
 
   &, &.is-active {
     transform: none;
-  }
-  // Since detached menus don't animate, we just show and hide the menu
-  &.is-active {
-    display: block;
   }
 
   & ~ #{$offcanvas-frame-selector} {
